# public-chat

./: Cargo.toml  Dockerfile  build.sh
.github/workflows/: public-chat-CI.yml  public-chat-CI_DEV.yml
src/: config.rs  main.rs  message.rs  server.rs  session.rs
