[package]
name = "public-chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-broker = "0.4.2"
actix-files = "0.6"
actix-web-actors = "4.1"

env_logger = "0.9"
log = "0.4"
rand = "0.8"

json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
